--- a/REDUX/Albums/package.json
+++ b/REDUX/Albums/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "firebase": "^10.5.0",
